Adding simple KML test file

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<h1>KMl Map Test</h1>
+<p><a href="kml-test-page.html">Test Page</a></p>
 </body>
 </html>
