--- a/kml-test-page.html
+++ b/kml-test-page.html
@@ -33,7 +33,7 @@
     <div id="capture"></div>
     <script>
       var map;
-      var src = 'https://developers.google.com/maps/documentation/javascript/examples/kml/westcampus.kml';
+      var src = 'https://vanriper.gitub.io/test.kml';
 
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
