--- a/kml-test-page.html
+++ b/kml-test-page.html
@@ -35,7 +35,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACe1r_UebFev_6e-vHEgGtWSeyMEC7H7M&callback=initMap">
     </script>
   </body>
 </html>
