--- a/kml-test-page.html
+++ b/kml-test-page.html
@@ -29,7 +29,7 @@
         });
 
         var ctaLayer = new google.maps.KmlLayer({
-          url: 'http://googlemaps.github.io/js-v2-samples/ggeoxml/cta.kml',
+          url: 'https://vanriper.github.io/test.kml',
           map: map
         });
       }
