--- a/goconmap.html
+++ b/goconmap.html
@@ -29,7 +29,7 @@
         });
 
         var ctaLayer = new google.maps.KmlLayer({
-          url: 'https://vanriper.github.io/goconmap.kml',
+          url: 'https://vanriper.github.io/goconmap.kml?v=1',
           map: map
         });
       }
